Changelog 1.6.0:
Some Greek translations added
Some German translations added
Next Up menu now generated completely locally using DB query
Added All-Debrid Support
Premiumize now uses O-Auth (re-auth is required)
Complete re-work of the standard playlist building (removes building playlist window for standard playback)
Re-work of My Files module to reduce spaghetti
Re-work of resolver module to reduce spaghetti
New Custom Windows Still Watching/Play Next
Added update support for Seren Themes
Removed support for UpNext addon
Lists are now synced to the trakt database
More work on player.py module, better bookmark identification and playback marking
Re-work Trakt Manager to be more context sensitive
Added ability to paginate Trakt lists
Added some more shortcuts to the search menu
Show information is confirmed with IMDB prior to scrape
Date and time in custom windows now displays in regional format
Added fallbacks for shows meta gathering in Trakt DB
Source filtering improvements to reduce meta loss
Set a timeout for Fanart.tv calls (reduces slow downs at cost of artwork)
Re-worked intial trakt sync and removed dialog box
Complete overhaul of the bookmark system
Fixed torrent semaphore not being released
Playback parameters are now applied to further episodes
Implement new listall endpoint for Premiumize cloud scraping (decreased scrape times)
More minor bugfixes (honestly could not list them all)

Changelog 1.4.7:
Enable Kodi Menu caching on search results
Increase source info identification
Fix mislabeled strings in trakt manager
Adjust premiered meta key to be gathered from trakt information instead of alternative indexer
Add fallback to account for empty premiered key set to empty string

Changelog 1.4.6:
Removed duplicate caching from meta provider modules
Fixed typos
Additional translation strings added
Fixed potential deadlocks from occuring in the worker module
Reduced workers for Trakt Sync operations

Changelog 1.4.5: